<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".option2"
    android:background="@color/black">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/centerhorizontalline"
        android:layout_centerInParent="true">

    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="10dp"
        android:padding="10dp"
        android:fontFamily="@font/raleway_bold"
        android:text="Check Your BMI"
        android:textColor="@color/g2"
        android:textAlignment="viewStart"
        android:textSize="25dp"
        android:textStyle="bold" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:id="@+id/centerverticalline">

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/male"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_above="@id/heightlayout"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="35dp"
        android:layout_toStartOf="@id/centerverticalline"
        android:background="@drawable/cardbackgroung">

        <ImageView
            android:layout_width="170px"
            android:layout_height="170px"
            android:layout_above="@id/textmale"
            android:layout_centerInParent="true"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/todo"
            android:src="@drawable/male">

        </ImageView>

        <TextView
            android:id="@+id/textmale"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/male"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold">

        </TextView>


    </RelativeLayout>

    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_above="@id/heightlayout"
        android:layout_marginBottom="35dp"
        android:layout_marginRight="20dp"
        android:layout_toEndOf="@id/centerverticalline"
        android:background="@drawable/cardbackgroung"
        android:layout_marginLeft="20dp"
        android:id="@+id/female">

        <ImageView
            android:layout_width="170px"
            android:layout_height="170px"
            android:layout_centerInParent="true"
            android:layout_above="@id/textfemale"
            android:layout_marginBottom="20dp"
            android:src="@drawable/female"
            android:contentDescription="@string/todo">

        </ImageView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/femaletext"
            android:id="@+id/textfemale"
            android:textStyle="bold"
            android:fontFamily="@font/raleway_bold"
            android:textAlignment="center"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp">

        </TextView>


    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/heightlayout"
        android:layout_width="340dp"
        android:layout_height="150dp"
        android:layout_above="@id/centerhorizontalline"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="-50dp"
        android:background="@drawable/cardbackgroung">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/height"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold">

        </TextView>


        <TextView
            android:id="@+id/currentheight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerInParent="true"
            android:layout_marginBottom="50dp"
            android:text="@string/startingheight"
            android:textColor="@color/white"
            android:textSize="40sp"
            android:textStyle="bold">

        </TextView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/currentheight"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/unit"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />


        <SeekBar
            android:id="@+id/seekbarforheight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="20dp"
            android:progressTint="@color/g2"
            android:thumbTint="@color/white">

        </SeekBar>

    </RelativeLayout>

    <android.widget.Button
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/calculatebmi"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="15dp"
        android:background="@color/g2"
        android:text="@string/calculate_your_bmi"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:fontFamily="@font/raleway_bold"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        >

    </android.widget.Button>


    <RelativeLayout
        android:id="@+id/weight"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_below="@id/heightlayout"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="85dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_toStartOf="@id/centerverticalline"
        android:background="@drawable/cardbackgroung">


        <TextView
            android:id="@+id/textweight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/weight"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold">

        </TextView>


        <TextView
            android:id="@+id/currentweight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/startingweight"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold">

        </TextView>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/plusminus">

            <ImageView
                android:id="@+id/decrementweight"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/minus">

            </ImageView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/plusminus">

            <ImageView
                android:id="@+id/incremetweight"
                android:layout_width="30dp"
                android:layout_height="30dp"

                android:contentDescription="@string/todo"
                android:src="@drawable/add1">

            </ImageView>

        </RelativeLayout>
    </RelativeLayout>


    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_toEndOf="@id/centerverticalline"
        android:background="@drawable/cardbackgroung"
        android:layout_below="@id/heightlayout"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="85dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:id="@+id/Age">



        <TextView

            android:id="@+id/textage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:text="@string/age"
            android:fontFamily="@font/raleway_bold"
            android:layout_marginTop="15dp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_marginBottom="10dp">

        </TextView>

        <TextView
            android:id="@+id/currentage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/raleway_regular"
            android:text="@string/startingage"
            android:textAlignment="center"

            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold">

        </TextView>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="20dp"
            android:background="@drawable/plusminus"
            >

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/minus"
                android:id="@+id/decrementage"

                android:contentDescription="@string/todo">

            </ImageView>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_marginEnd="20dp"
            android:layout_alignParentEnd="true"
            android:background="@drawable/plusminus"
            >

            <ImageView
                android:id="@+id/incrementage"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/add1">

            </ImageView>

        </RelativeLayout>
    </RelativeLayout>



   

</RelativeLayout>